@@ -155,6 +155,8 @@ ctags-exuberant|Exuberant Ctags|ctags by Darren Hiebert:\
 #	specified -s option then use this value as script alias.
 # show_position:
 #	show position per function definition. (false by default.)
+# position_begin, position_end:
+#	posiotion mark.
 #
 #---------------------------------------------------------------------
 htags:\
